--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calendar-main",
   "private": true,
-  "homepage": "http://JuliaEAA.github.io/calendar-main/",
+  "homepage": "https://JuliaEAA.github.io/calendar-main",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -13,7 +13,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
@@ -26,6 +25,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.3.1"
   }
