--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calendar-main",
   "private": true,
-  "homepage": "https://JuliaEAA.github.io/calendar-main",
+  "homepage": "https://juliaeaa.github.io/calendar-main/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
